[package]
name = "dioxus-spring"
description = "Animation library for Dioxus"
version = "0.3.0-alpha.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-channel = "1.9.0"
dioxus = { version = "0.6.0-alpha.2", features = ["web"] }
futures = "0.3.28"
interpolation = "0.3.0"
js-sys = "0.3.64"
log = "0.4.20"
dioxus-logger = "0.4.1"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
dioxus-use-mounted = "0.3.0-alpha.3"
slotmap = "1.0.6"

[dev-dependencies]
dioxus-resize-observer = "0.3.0-alpha.3"
